# covid-19

./: .cproject  .project  CMakeLists.txt  README
db/: covid19.backup  db.sql
include/: Net.h  dataset.h  net.h
reports/: covid-confirmed-cases-since-100th-case-202002.csv  covid-confirmed-cases-since-100th-case-202003.csv  covid-confirmed-deaths-since-5th-death-202002.csv  covid-confirmed-deaths-since-5th-death-202003.csv
scripts/: dataset.py  import.py  plot.py
snapshots/: 2fcr32x4.pt  4fcr64x5.pt  8conv8-3.pt  8fcr64x2.pt  model.pt
src/: Dataset.cpp  Net.cpp  dataset.cpp  dataset.py  import.py  main.cpp  net.cpp  plot.py
